--- a/styles/global.css
+++ b/styles/global.css
@@ -13,7 +13,7 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Helvetica, Arial, 'Cantarell', 'Fira Sans',
     'Droid Sans', 'Helvetica Neue', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
     'Segoe UI Symbol';
-  font-size: 16px;
+  font-size: 1.5rem;
   font-weight: 400;
   font-feature-settings: 'kern';
   text-rendering: optimizeLegibility;
@@ -31,8 +31,12 @@ pre,
   border-radius: 6px;
   margin: 1rem 0 1rem 0;
   padding: 1.2rem;
-  font-size: 1em;
+  font-size: 1.5rem;
   background-color: rgb(250, 250, 250); /* use material UI theme bg */
+}
+
+code {
+  font-size: 1.5rem;
 }
 
 .dark-mode pre,
@@ -305,7 +309,7 @@ ul.contains-task-list li {
 }
 
 .dark-mode .code-header {
-  background-color: var(--dm-code-border-color);
+  background-color: var(--dm-sidebar-bg-color);
 }
 
 .code-header + .code {
