--- a/styles/global.css
+++ b/styles/global.css
@@ -7,6 +7,7 @@
   --primary-box-shadow-color: var(--indigo-box-shadow-color);
   --primary-box-shadow-color-darker: var(--indigo-box-shadow-color-darker);
   --text-color-on-primary-color-bg: var(--text-color-on-indigo-color-bg);
+  --base-border-radius: 1.4rem;
 }
 
 body {
