Implement folding side menu headings

--- a/styles/global.css
+++ b/styles/global.css
@@ -423,3 +423,22 @@ mark {
 .dark-mode mark {
   background: yellow;
 }
+
+.sidebar-title {
+  cursor: pointer;
+  user-select: none;
+}
+
+.sidebar-section .sidebar-title {
+  width: 210px;
+  line-height: 2rem;
+  margin-top: 1rem;
+}
+
+.sidebar-section .sidebar-title-icon {
+  margin-right: 4px;
+  margin-top: 2px;
+}
+.sidebar-section .sidebar-icon {
+  margin-left: 1.8rem;
+}
