--- a/styles/global.css
+++ b/styles/global.css
@@ -1,19 +1,9 @@
 @import url('https://rsms.me/inter/inter.css');
-:root {
-  --primary-color: var(--indigo-color);
-  --primary-color-light: var(--indigo-color-light);
-  --primary-color-very-light: var(--indigo-color-very-light);
-  --primary-color-dark: var(--indigo-color-dark);
-  --primary-color-very-dark: var(--indigo-color-very-dark);
-  --primary-box-shadow-color: var(--indigo-box-shadow-color);
-  --primary-box-shadow-color-darker: var(--indigo-box-shadow-color-darker);
-  --text-color-on-primary-color-bg: var(--text-color-on-indigo-color-bg);
-}
 
 body {
-  font-family: 'Inter var', 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Calibri,
-    Helvetica, Arial, Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif,
-    'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+  font-family: 'Inter var', 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica,
+    'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji',
+    'Segoe UI Emoji', 'Segoe UI Symbol';
   font-size: 1.6rem;
   font-weight: 400;
   font-feature-settings: 'kern';
@@ -25,19 +15,25 @@ body {
   line-height: 2.4rem;
 }
 
+kbd,
 pre,
+code,
 .code {
-  font-family: 'SF Mono', 'Cascadia Code', 'Consolas', 'Menlo', 'Bitsream Vera Sans Mono',
-    'Droid Sans Mono', 'Ubuntu Mono', monospace;
-  border-radius: 6px;
-  margin: 1rem 0 1rem 0;
-  padding: 1.2rem;
-  font-size: 1.5rem;
-  background-color: rgb(250, 250, 250); /* use material UI theme bg */
+  font-family: 'IBM Plex Mono', 'SF Mono', 'Cascadia Code', 'Consolas', 'Menlo',
+    'Bitsream Vera Sans Mono', 'Droid Sans Mono', 'Ubuntu Mono', monospace;
 }
 
-code {
+.code {
   font-size: 1.5rem;
+  border-radius: 6px;
+  font-size: 1.5rem;
+  background-color: #fafafa;
+}
+
+pre.code {
+  margin: 0;
+  padding: 10px 0;
+  border: none;
 }
 
 .dark-mode pre,
@@ -334,8 +330,10 @@ ul.contains-task-list li {
 .code-header {
   display: flex;
   padding: 0;
+  border: none;
   justify-content: flex-end;
   margin-bottom: 0;
+  border-radius: 6px;
   border-bottom-left-radius: 0;
   border-bottom-right-radius: 0;
   background-color: var(--lm-code-border-color);
