--- a/styles/global.css
+++ b/styles/global.css
@@ -36,6 +36,10 @@ pre.code {
   border: none;
 }
 
+.clean .linenumber {
+  display: none !important;
+}
+
 .dark-mode pre,
 .dark-mode .code {
   background-color: var(--dm-navbar-bg-color); /* overwrite material UI theme bg */
