--- a/styles/global.css
+++ b/styles/global.css
@@ -37,6 +37,10 @@ pre.code {
   border: none;
 }
 
+.linenumber {
+  margin-right: 0 !important;
+}
+
 .clean .linenumber {
   display: none !important;
 }
@@ -236,7 +240,7 @@ details p:nth-child(2) {
 }
 
 .page-toc-container li {
-  font-size: 1.5rem;
+  font-size: 1.4rem;
   padding: 0.4rem 0 0.4rem 0rem;
   line-height: 2rem;
   margin: 0;
