--- a/styles/global.css
+++ b/styles/global.css
@@ -5,29 +5,20 @@ body {
   font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, 'Cantarell',
     'Fira Sans', 'Droid Sans', 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji',
     'Segoe UI Emoji', 'Segoe UI Symbol';
-  font-size: 1.6rem;
-  font-feature-settings: 'kern';
-  text-rendering: optimizeLegibility;
-  -webkit-scroll-behavior: smooth;
-  -moz-scroll-behavior: smooth;
-  -ms-scroll-behavior: smooth;
-  scroll-behavior: smooth;
-  line-height: 2.4rem;
+  font-size: 15px;
 }
 
 kbd,
 pre,
 code,
-.code-filename,
 .code {
   font-family: 'Recursive', 'SF Mono', 'Menlo', 'Cascadia Code', 'Consolas',
     'Bitsream Vera Sans Mono', 'Droid Sans Mono', 'Ubuntu Mono', monospace;
 }
 
 .code {
-  font-size: 1.5rem;
+  font-size: 14px;
   border-radius: 6px;
-  font-size: 1.5rem;
   background-color: #f5f7f9;
 }
 
