Revamp dark mode - no more flicker

--- a/styles/global.css
+++ b/styles/global.css
@@ -481,3 +481,7 @@ mark {
 .sidebar-section .sidebar-icon {
   margin-left: 1.8rem;
 }
+
+.dark-mode .content-wrapper {
+  background-color: var(--dm-base-body-bg-color);
+}
