--- a/styles/global.css
+++ b/styles/global.css
@@ -5,6 +5,7 @@ body {
   font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, 'Cantarell',
     'Fira Sans', 'Droid Sans', 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji',
     'Segoe UI Emoji', 'Segoe UI Symbol';
+    font-size: 1.5rem;
 }
 
 kbd,
@@ -14,6 +15,7 @@ code,
   font-family: 'Recursive', 'SF Mono', 'Menlo', 'Cascadia Code', 'Consolas',
     'Bitsream Vera Sans Mono', 'Droid Sans Mono', 'Ubuntu Mono', monospace;
   font-size: var(--base-font-size);
+  font-size: 1.5rem;
 }
 
 .code {
