--- a/styles/global.css
+++ b/styles/global.css
@@ -293,9 +293,7 @@ details p:nth-child(2) {
 }
 
 blockquote {
-  margin-top: 1em;
-  margin-bottom: 1em;
-  margin-left: 2em;
+  margin: 1em 0 1em 1em;
   padding-left: 1em;
   border-left: 3px solid rgba(204, 204, 204, 0.452);
 }
