Rework tabs to use containers

--- a/styles/global.css
+++ b/styles/global.css
@@ -29,6 +29,10 @@ pre.code {
   border: 1px solid #e7eaec;
 }
 
+.token.content {
+  margin: 0;
+}
+
 .dark-mode pre.code {
   border: 1px solid var(--dm-navbar-bg-color);
 }
